Rename TeamForm and TeamSelectView to reflect PersonSelectForm instead

--- a/quenten/templates/forms/team_form.html
+++ b/quenten/templates/forms/team_form.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Team Select{% endblock %}
+{% block title %}Form Selection{% endblock %}
 
 {% block content %}
 
-<h1>Select team and form</h1>
+<h1>Select form</h1>
 
   <form method="post" class="mt-3">
     {% load crispy_forms_tags %}
