--- a/quenten/templates/uncoded_list.html
+++ b/quenten/templates/uncoded_list.html
@@ -13,6 +13,7 @@
 <table class="table table-striped">
     <thead>
       <tr>
+        <th scope="col">Paper Index</th>
         <th scope="col">Date</th>
         <th scope="col">Team Name</th>
         <th scope="col">Added by</th>
@@ -22,7 +23,10 @@
         {% for item in object_list %}
             <tr>
                 <td>
-                   <a href="{% url 'uncoded-update' uuid=item.id %}">{{ item.created_at }}</a>
+                   <a href="{% url 'uncoded-update' item.paper_index %}">{{ item.paper_index }}</a>
+                </td>
+                <td>
+                    {{ item.created_at }}
                 </td>
                 <td>
                     {{ item.team.name }}
