--- a/quenten/templates/list.html
+++ b/quenten/templates/list.html
@@ -37,4 +37,10 @@
     </tbody>
   </table>
 
+  {% if is_paginated %}
+
+    {% include 'includes/pagination.html' %}
+
+  {% endif %}
+
 {% endblock %}
