--- a/quenten/templates/uncoded_list.html
+++ b/quenten/templates/uncoded_list.html
@@ -41,4 +41,10 @@
     </tbody>
   </table>
 
+  {% if is_paginated %}
+
+    {% include 'includes/pagination.html' %}
+
+  {% endif %}
+
 {% endblock %}
