--- a/quenten/templates/includes/pagination.html
+++ b/quenten/templates/includes/pagination.html
@@ -1,19 +1,19 @@
 <div class="mt-4 mb-4">
 
     {% if page_obj.has_previous %}
-        <a class="btn btn-outline-primary" href="?page=1">First</a>
+        <a class="btn btn-outline-primary" href="?page=1{{ query_string }}">First</a>
     {% endif %}
 
     {% for num in page_obj.paginator.page_range %}
         {% if page_obj.number == num %}
-            <a class="btn btn-primary" href="?page={{ num }}">{{ num }}</a>
+            <a class="btn btn-primary" href="?page={{ num }}{{ query_string }}">{{ num }}</a>
         {% elif num > page_obj.number|add:'-5' and num < page_obj.number|add:'5' %}
-            <a class="btn btn-outline-primary" href="?page={{ num }}">{{ num }}</a>
+            <a class="btn btn-outline-primary" href="?page={{ num }}{{ query_string }}">{{ num }}</a>
         {% endif %}
     {% endfor %}
 
     {% if page_obj.has_next %}
-        <a class="btn btn-outline-primary" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        <a class="btn btn-outline-primary" href="?page={{ page_obj.paginator.num_pages }}{{ query_string }}">Last</a>
     {% endif %}
 
 </div>
