--- a/quenten/templates/includes/navbar.html
+++ b/quenten/templates/includes/navbar.html
@@ -9,9 +9,13 @@
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="/">Home</a>
                         <a class="nav-item nav-link" href="{% url 'results' %}">Results</a>
-                        <a class="nav-item nav-link" href="{% url 'uncoded-list' %}">Uncoded</a>
-                        <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
-                        <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
+                        {% if perms.web.code_responses %}
+                            <a class="nav-item nav-link" href="{% url 'uncoded-list' %}">Uncoded</a>
+                        {% endif %}
+                        {% if user.is_staff %}
+                            <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
+                        {% endif %}
+                        <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out ({{ user|title }})</a>
                     {% else %}
                         <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
                     {% endif %}
