--- a/quenten/templates/includes/navbar.html
+++ b/quenten/templates/includes/navbar.html
@@ -5,19 +5,24 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="navbar-nav">
+            <div class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="/">Home</a>
                         <a class="nav-item nav-link" href="{% url 'results' %}">Results</a>
                         {% if perms.web.code_responses %}
                             <a class="nav-item nav-link" href="{% url 'uncoded-list' %}">Uncoded</a>
                         {% endif %}
+
+
+            </div>
+            <div class="navbar-nav ms-auto">
                         {% if user.is_staff %}
                             <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
                         {% endif %}
                         <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out ({{ user|title }})</a>
                     {% else %}
-                        <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+                            <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+                    Navbar text with an inline element
                     {% endif %}
             </div>
         </div>
