--- a/quenten/templates/list.html
+++ b/quenten/templates/list.html
@@ -30,7 +30,11 @@
             {% get_person_type item as person_type %}
             <tr>
                 <td class="text-center">
-                   <a href="{% url 'result-detail' item.paper_index %}">{{ item.paper_index }}</a>
+                    {% if perms.web.update_response %}
+                        <a href="{% url 'result-detail' item.paper_index %}">{{ item.paper_index }}</a>
+                    {% else %}
+                        {{ item.paper_index }}
+                    {% endif %}
                 </td>
                 <td>
                     {{ item.created_at }}
