--- a/quenten/templates/includes/navbar.html
+++ b/quenten/templates/includes/navbar.html
@@ -6,23 +6,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <div class="navbar-nav mr-auto">
-                    {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="/">Home</a>
-                        <a class="nav-item nav-link" href="{% url 'results' %}">Results</a>
-                        {% if perms.web.code_responses %}
-                            <a class="nav-item nav-link" href="{% url 'uncoded-list' %}">Uncoded</a>
-                        {% endif %}
-
-
+                {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="/">Home</a>
+                    <a class="nav-item nav-link" href="{% url 'results' %}">Results</a>
+                    {% if perms.web.code_response %}
+                        <a class="nav-item nav-link" href="{% url 'uncoded-list' %}">Uncoded</a>
+                    {% endif %}
             </div>
             <div class="navbar-nav ms-auto">
-                        {% if user.is_staff %}
-                            <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
-                        {% endif %}
-                        <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out ({{ user|title }})</a>
-                    {% else %}
-                            <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+                    {% if user.is_staff %}
+                        <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
                     {% endif %}
+                    <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out ({{ user|title }})</a>
+                {% else %}
+                        <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+                {% endif %}
             </div>
         </div>
     </div>
