--- a/quenten/templates/includes/navbar.html
+++ b/quenten/templates/includes/navbar.html
@@ -9,12 +9,11 @@
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="/">Home</a>
                         <a class="nav-item nav-link" href="{% url 'results' %}">Results</a>
-                        {% if perms.web.code_responses %}
+                        {% if perms.web.code_response %}
                             <a class="nav-item nav-link" href="{% url 'uncoded-list' %}">Uncoded</a>
                         {% endif %}
-
-
             </div>
+            
             <div class="navbar-nav ms-auto">
                         {% if user.is_staff %}
                             <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
